Fixed x-scroll on small viewports

--- a/src/styles/pages/landing.scss
+++ b/src/styles/pages/landing.scss
@@ -1,11 +1,12 @@
 #title {
-	margin: -2rem -2rem 0rem -2rem;
-	height: calc(100vh + 1rem);
+	margin-top: 1rem;
+	height: 66vh;
 
 	display: flex;
 	align-items: center;
 	justify-content: center;
 
+	border-radius: 1em;
 	background: var(--body-bg) url("/img/landing.webp") no-repeat center center;
 	background-size: cover;
 }
@@ -15,6 +16,7 @@
 	
 	padding: 5rem;
 	background-color: #10173a29;
+	border-radius: .5em;
 
 	backdrop-filter: blur(1px);
 	text-shadow: 2px 2px 3px #000a41db;
@@ -27,5 +29,14 @@
 		list-style: none;
 		padding: 0;
 		margin: 0;
+	}
+}
+
+@media only screen and (min-width: 600px) {
+	//	Fix sideways scrolling
+	#title {
+		margin: -2rem -2rem 0rem -2rem;
+		height: calc(100vh + 1rem);
+		border-radius: 0em;
 	}
 }
